@@ -35,7 +35,8 @@ class CControllerWidgetGraphView extends CControllerWidget {
 			'dynamic_hostid' => 'db hosts.hostid',
 			'content_width' => 'int32',
 			'content_height' => 'int32',
-			'only_footer' => 'in 1'
+			'only_footer' => 'in 1',
+			'period' => 'int32'
 		]);
 	}
 
@@ -43,6 +44,9 @@ class CControllerWidgetGraphView extends CControllerWidget {
 		if ($this->getInput('only_footer', 0)) {
 			$this->setResponse(new CControllerResponseData([
 				'only_footer' => true,
+				'period_string' => $this->hasInput('period')
+					? ' ('.zbx_date2age(0, $this->getInput('period', 0)).')'
+					: '',
 				'user' => [
 					'debug_mode' => $this->getDebugMode()
 				]
@@ -67,6 +71,7 @@ class CControllerWidgetGraphView extends CControllerWidget {
 		$profileIdx = 'web.dashbrd';
 		$profileIdx2 = $dashboardid;
 		$unavailable_object = false;
+		$header_label = '';
 
 		if ($fields['source_type'] == ZBX_WIDGET_FIELD_RESOURCE_GRAPH && $fields['graphid']) {
 			$resource_type = SCREEN_RESOURCE_GRAPH;
@@ -86,6 +91,7 @@ class CControllerWidgetGraphView extends CControllerWidget {
 			$resource_type = null;
 			$graph_dims = getGraphDims();
 		}
+		$graph_dims['shiftYtop'] = CLineGraphDraw::DEFAULT_TOP_BOTTOM_PADDING;
 
 		// Prepare timeline details
 		$timeline = calculateTime([
@@ -132,6 +138,14 @@ class CControllerWidgetGraphView extends CControllerWidget {
 						|| !in_array($item['value_type'], [ITEM_VALUE_TYPE_FLOAT, ITEM_VALUE_TYPE_UINT64])) {
 					$unavailable_object = true;
 					$resourceid = null;
+				}
+				else {
+					$db_item = API::Item()->get([
+						'output' => [],
+						'selectHosts' => ['name'],
+						'itemids' => $item['itemid']
+					]);
+					$item['hosts'] = $db_item[0]['hosts'];
 				}
 			}
 			// Find requested host and change graph details.
@@ -185,6 +199,8 @@ class CControllerWidgetGraphView extends CControllerWidget {
 							$graph['ymin_type'] = GRAPH_YAXIS_TYPE_CALCULATED;
 						}
 					}
+
+					$graph['hosts'] = $hosts;
 				}
 
 				if ($graph) {
@@ -210,19 +226,24 @@ class CControllerWidgetGraphView extends CControllerWidget {
 			}
 			elseif ($fields['source_type'] == ZBX_WIDGET_FIELD_RESOURCE_SIMPLE_GRAPH) {
 				$items = API::Item()->get([
-					'output' => [],
+					'output' => ['name', 'key_', 'delay', 'hostid'],
+					'selectHosts' => ['name'],
 					'itemids' => $resourceid,
 					'filter' => ['value_type' => [ITEM_VALUE_TYPE_FLOAT, ITEM_VALUE_TYPE_UINT64]],
 					'webitems' => true
 				]);
+				$item = reset($items);
 
-				$unavailable_object = !$items;
+				if (!$item) {
+					$unavailable_object = true;
+				}
 			}
 			elseif ($fields['source_type'] == ZBX_WIDGET_FIELD_RESOURCE_GRAPH) {
 				// get graph, used below
 				$graph = API::Graph()->get([
 					'graphids' => $resourceid,
-					'output' => API_OUTPUT_EXTEND
+					'output' => API_OUTPUT_EXTEND,
+					'selectHosts' => ['name']
 				]);
 				$graph = reset($graph);
 
@@ -244,6 +265,7 @@ class CControllerWidgetGraphView extends CControllerWidget {
 					$graph_src->setArgument('itemids[]', $resourceid);
 					$graph_src->setArgument('width', $width);
 					$graph_src->setArgument('height', $height);
+					$graph_src->setArgument('legend', $fields['show_legend']);
 				}
 				else {
 					$graph_src = new CUrl('chart3.php');
@@ -252,9 +274,13 @@ class CControllerWidgetGraphView extends CControllerWidget {
 				$graph_src->setArgument('period', $timeline['period']);
 				$graph_src->setArgument('stime', $timeline['stime']);
 				$graph_src->setArgument('isNow', $timeline['isNow']);
+
+				$item = CMacrosResolverHelper::resolveItemNames([$item])[0];
+				$header_label = $item['hosts'][0]['name'].NAME_DELIMITER.$item['name_expanded'];
 			}
 			elseif ($fields['source_type'] == ZBX_WIDGET_FIELD_RESOURCE_GRAPH) {
 				$graph_src = '';
+				$header_label = $graph['hosts'][0]['name'].NAME_DELIMITER.$graph['name'];
 
 				if ($fields['dynamic'] == WIDGET_DYNAMIC_ITEM && $dynamic_hostid && $resourceid) {
 					$chart_file = ($graph['graphtype'] == GRAPH_TYPE_PIE || $graph['graphtype'] == GRAPH_TYPE_EXPLODED)
@@ -304,7 +330,7 @@ class CControllerWidgetGraphView extends CControllerWidget {
 
 				$graph_src->setArgument('width', $width);
 				$graph_src->setArgument('height', $height);
-				$graph_src->setArgument('legend', $graph['show_legend']);
+				$graph_src->setArgument('legend', ($fields['show_legend'] == 1 && $graph['show_legend'] == 1) ? 1 : 0);
 				$graph_src->setArgument('period', $timeline['period']);
 				$graph_src->setArgument('stime', $timeline['stime']);
 				$graph_src->setArgument('isNow', $timeline['isNow']);
@@ -322,11 +348,12 @@ class CControllerWidgetGraphView extends CControllerWidget {
 				$graph_src->setArgument('outer', '1');
 			}
 
+			$graph_src->setArgument('widget_view', '1');
 			$time_control_data['src'] = $graph_src->getUrl();
 		}
 
-		$this->setResponse(new CControllerResponseData([
-			'name' => $this->getInput('name', $this->getDefaultHeader()),
+		$response = [
+			'name' => $this->getInput('name', ''),
 			'graph' => [
 				'dataid' => $dataid,
 				'containerid' => $containerid,
@@ -345,6 +372,13 @@ class CControllerWidgetGraphView extends CControllerWidget {
 			'user' => [
 				'debug_mode' => $this->getDebugMode()
 			]
-		]));
+		];
+
+		if ($response['name'] === '') {
+			$response['name'] = $header_label;
+			$response['period_string'] = ' ('.zbx_date2age(0, $timeline['period']).')';
+		}
+
+		$this->setResponse(new CControllerResponseData($response));
 	}
 }
