@@ -301,19 +301,28 @@ var timeControl = {
 		}
 
 		var widget = widgets[0],
-			url = new Curl('zabbix.php');
+			url = new Curl('zabbix.php'),
+			post_args = {
+				uniqueid: widget['uniqueid'],
+				only_footer: 1
+			};
+
+		if (widget.type === 'graph') {
+			post_args.period = this.timeline.period();
+		}
 
 		url.setArgument('action', 'widget.graph.view');
 		jQuery.ajax({
 			url: url.getUrl(),
 			method: 'POST',
-			data: {
-				uniqueid: widget['uniqueid'],
-				only_footer: 1
-			},
+			data: post_args,
 			dataType: 'json',
 			success: function(resp) {
 				widget['content_footer'].html(resp.footer);
+
+				if ('period_string' in resp) {
+					jQuery('h4 span', widget['content_header']).text(resp.period_string);
+				}
 			}
 		});
 	},
